# The-second-semester

12lab/: 12.c  functions.c  header.h  main.c
13lab/: CMakeLists.txt  heap_sort.c  main.c  shaker_sort.c  simple_include_sort.c  sort.h
14lab. Processing text files/: 14.c
15lab. Processing binary files/: 15.c
16lab/: 16.c
18lab/: 18.cpp
19lab/: 19.cpp
5lab/: 5.19.c  5.20.c  5.29.c  5.40.c  5.49.c  5.53.c
Development of a library of search functions/: Makefile  main.c  search.c  search.h
cmake_tasks/0/: Makefile
cmake_tasks/1/: CMakeLists.txt
cmake_tasks/2/: CMakeLists.txt
cmake_tasks/2/dynamic/: CMakeLists.txt
cmake_tasks/2/static/: CMakeLists.txt
